2003-12-20  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/helper/bezier-utils.cpp (sp_bezier_fit_cubic): Implement as a call
	to sp_bezier_fit_cubic_r.
	(sp_bezier_fit_cubic_full): Mark *tHat1 and *tHat2 as const.
	(sp_bezier_fit_cubic_full, ChordLengthParameterize): Add minimal
	handling for the case where the input data is a zero-length path.
	(NewtonRaphsonRootFind): If "improved" value is NaN or +/-inf then
	return the original.

	* src/libnr/nr-macros.h (CLAMP): Change the behaviour if the first
	  argument is NaN: previously it would return NaN, now it returns the
	  requested lower bound.  Document the behaviour.  Add an assertion that
	  the requested lower bound <= the requested upper bound.

	* src/libnrtype/nr-type-ft2.cpp (nr_typeface_ft2_lookup): Change apparently-erroneous
	  arguments to CLAMP, and add a FIXME comment indicating that the new arguments are
	  just a guess as to the original intent.

2003-12-20  MenTaLguY <mental@rydia.net>

	* src/help.cpp, glade/about_svg.tmpl, glade/about.svg:
	  fixed version display in about box

	* src/desktop.cpp, src/desktop.h, src/document.cpp, src/document.h:
	  added sp_desktop_item_at_point()

2003-12-19  bulia byak <bulia@dr.com>

	* src/sp-item.cpp src/sp-item.h: new sp_item_get_arenaitem (by mental)

	* src/main.cpp src/file.cpp src/file.h src/dialogs/export.cpp: export UI improvements
	(patches from the tracker)

	* src/select-context.cpp: shift-click selection is now in root_handler, uses
	sp_document_item_at_point(); changed shift-rubberband selection to always select
	instead of toggle

	* src/document.h src/document.cpp: wrong order of arguments in overlap() fixed; new:
	sp_document_item_at_point(), uses sp_item_get_arenaitem

	* src/Makefile.am: fix: ps.c -> ps.cpp

	* src/nodepath.cpp: dragging node with ctrl+alt restricts it to the directions of its
	handles and their perpendiculars

2003-12-19  MenTaLguY <mental@rydia.net>
